Fix sticky book nav flickering

--- a/public/themes/custom/julkaisut/assets/styles/partials/book-navigation.scss
+++ b/public/themes/custom/julkaisut/assets/styles/partials/book-navigation.scss
@@ -7,13 +7,16 @@
   list-style-type: none;
   padding-left: 0;
   background-color: var(--color-primary);
-  position: fixed;
-  bottom: 0;
+  position: absolute;
   left: 0;
   right: 0;
   z-index: 10;
   box-shadow: 0px -3px 6px #00000029;
-  height: 80px;
+
+  &.is-sticky {
+    position: fixed;
+    bottom: 0;
+  }
 
   .hds-icon {
     flex: 0 0 auto;
